--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,7 @@
     font-family: "circular-std-book", Arial, Helvetica, sans-serif;
     color: rgb(243, 245, 247);
     background-color: black;
+    scroll-behavior: smooth;
   }
 
   input {
@@ -121,4 +122,11 @@
   --container-30-60: clamp(2.34rem, 4.83vi + 1.14rem, 5rem);
   --container-35-80: clamp(2.73rem, 7.15vi + 0.95rem, 6.67rem);
   --container-80-200: clamp(6.25rem, 18.93vi + 1.52rem, 16.66rem);
+
+  --animate-opacity: opacity 1s 2s ease-in-out both;
+  @keyframes opacity {
+    100% {
+      opacity: 1;
+    }
+  }
 }
